// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test useData lifecycle 1`] = `
Object {
  "data": null,
  "error": null,
  "loading": true,
  "refetch": [Function],
}
`;

exports[`test useData lifecycle 2`] = `
Object {
  "data": 42,
  "error": null,
  "loading": false,
  "refetch": [Function],
}
`;

exports[`test useData lifecycle 3`] = `
Object {
  "data": 42,
  "error": null,
  "loading": true,
  "refetch": [Function],
}
`;
